release 1.0.1 (2008-11/12)
- Fixed and improved support for the selection of the most acceptable media type
  used for the content type when the application declares @Produces on a class
  or a resource method.
- Fix for issue 138
  https://jersey.dev.java.net/issues/show_bug.cgi?id=138
  When the application does not declare a media type as the content type of
  a response then the type is selected from the acceptable headers given
  the list of message body writers, what they produce and an acceptable
  media type is writable.
- Fix for issue 139
  https://jersey.dev.java.net/issues/show_bug.cgi?id=139
  The media types in the accept header are ordered using the quality 
  parameter as the primiary key and the media specifity (x/y < x/* < */*)
  as the secondary key).
- When using JSP-based views the response status and meta-data is now committed
  to the HttpServletResponse before the JSP is processed.
- Fix for issue 137
  https://jersey.dev.java.net/issues/show_bug.cgi?id=137
  MessageBodyFactory should pass the full MediaType
- Improved valdation error when a sub-resource locator has a unannotated
  parameter this is likely, instead, to be associated with an request entity of 
  a resource method.
- Fixed issue 130
  https://jersey.dev.java.net/issues/show_bug.cgi?id=130
  Building from an @Path value that contains a template with a regex now
  build the URI without error.
- Fixed reloading of servlet container. The configuration of the web application
  occurs only at servlet initiation and not when a reload occurs.
- Included simple Groovy example.
- Fixed issue 128
  https://jersey.dev.java.net/issues/show_bug.cgi?id=128
  An method parameter that is a request entity is a parameter that is:
  1) not annotated with any annotations; or
  2) annotated with one or more annotations all of which are recognized by
     the Jersey runtime.
- Fixed issue 117
  https://jersey.dev.java.net/issues/show_bug.cgi?id=117